fix nav for mobile display, fix section to show below nav on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -173,6 +173,7 @@ figcaption {
     padding-top: 10px;
     max-width: 600px;
     padding-bottom: 60px;
+    padding-top: 40px;
 
 }
 
@@ -215,6 +216,7 @@ figcaption {
     border-top: 2px solid rgba(19, 56, 88, 0.85);
     max-width: 600px;
     margin: auto;
+    padding-bottom: 20px;
 
 }
 
@@ -398,16 +400,20 @@ button:hover {
 
 
     /* ALL sections styling for smartphone */
-    .content {
+    .content-wrapper {
         max-width: 400px;
         margin: auto;
-        padding: 130px 30px 30px 30px;
+        padding: 120px 30px 30px 30px;
         display: block;
     }
 
-    h2 {
+    h1 {
+        font-size: 2.7rem;
+    }
+
+    h2, #subtitle {
         text-align: center;
-        font-size: 2.3rem;
+        font-size: 1.3rem;
     }
     
     p {
@@ -416,48 +422,19 @@ button:hover {
         text-align: left;
     }
 
-    /* Contact form styling for smartphone */
-    /* .contact-form {
+    nav {
         display: flex;
         flex-direction: column;
-        margin: auto;
-    }
-    .form-inputs {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        width: 90%;
-        margin: auto;
-    }
-    
-    .left {
-        display: flex;
-        flex-direction: column;
-        justify-content: start;
-        margin: auto;
-
-    }
-    
-    #name-row, #email-row {
-        padding: 0 0 20px 0;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .right {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        margin: auto;
-    }
-    
-    label {
-        padding-right: 7px;
     }
 
-    button {
-        background-color: rgb(196, 184, 184);
-    } */
+    .nav-link-active {
+        border: none;
+        color: salmon;
+    }
+
+
+
+
 }
 
 
